Fix related links animation jumps

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -104,7 +104,7 @@ body {
 }
 
 .no-margin {
-    margin: 0;
+    margin: 0 !important;
 }
 
 .center-align {
